# GlobalSolution2.PythonAgno.CareerTrials

./: .env.example  .gitignore  AgentFactory.py  Config.py  Dockerfile  README.md  Utils.py  main.py  pyproject.toml
dtos/: Challenge.py  ChallengesResponse.py  ErrorResponse.py  MessageRequest.py  MessageResponse.py
tmp/: agents.db
