[project]
name = "globalsolution2-pythonagno-careertrials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.2.13",
    "fastapi>=0.121.3",
    "google-genai>=1.52.0",
    "openai>=2.8.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
